# MetaCanSNPer

./: .gitignore  INSTALL.md  README.md  osShortHands.py  pyproject.toml  setup.py  specCallData.vcf
CanSNPer2/: defaultFlags.toml  notes.md
CanSNPer2/modules/: Aligners.py  CanSNPer2.py  DatabaseConnection.py  Databases.py  DirectoryLibrary.py  DownloadReferences.py  ErrorFixes.py  LogKeeper.py  Mappers.py  ParseXMFA.py  ParseXMFA2.py  SNPCallers.py  VCFhandler.py  Wrappers.py
MetaCanSNPer/: CLI.py  CommandLineParser.py  Globals.py  __init__.py  __main__.py  config.cfg  defaultFlags.toml  notes.md
MetaCanSNPer/IsolatedSoftware/: ParseXMFA2.py
MetaCanSNPer/core/: Aligners.py  Commands.py  DirectoryLibrary.py  DownloadReferences.py  Downloaders.py  ErrorFixes.py  FileNameAlignment.py  Hooks.py  LogKeeper.py  Mappers.py  MetaCanSNPer.py  SNPCallers.py  TerminalUpdater.py  Wrappers.py  _FileNameAlignment.py  __init__.py
MetaCanSNPer/modules/: Aligners.py  CanSNP2VCF.py  Commands.py  Database.py  Databases.py  DirectoryLibrary.py  DownloadReferences.py  Downloader.py  ErrorFixes.py  FastqSplitter.py  FileNameAlignment.py  Hooks.py  LegacyDatabase.py  LogKeeper.py  Mappers.py  MetaCanSNPer.py  SNPCallers.py  SubSampling.py  TerminalUpdater.py  ThreadedDatabase.py  VCFhandler.py  Wrappers.py  __init__.py
MetaCanSNPer/modules/Databases/: Columns.py  Databases.py  Functions.py  Globals.py  Tables.py  Tree.py  _Constants.py  __init__.py
MetaCanSNPer/software/: Mappers.py
tests/: test_database.py  test_dir_lib.py  test_downloads.py  test_hooks.py  test_library.py  test_main.py  test_script.py
